new iface to uniformly access elements children and their properties
Original commit message from CVS:
new iface to uniformly access elements children and their properties

--- a/configure.ac
+++ b/configure.ac
@@ -676,6 +676,7 @@ testsuite/Makefile
 testsuite/bins/Makefile
 testsuite/bytestream/Makefile
 testsuite/caps/Makefile
+testsuite/childproxy/Makefile
 testsuite/cleanup/Makefile
 testsuite/clock/Makefile
 testsuite/debug/Makefile
