gst/gst-types.c: remove, it's called gst-argtypes.c these days
Original commit message from CVS:
* gst/gst-types.c:
remove, it's called gst-argtypes.c these days
* gst/common.h:
* gst/gst-argtypes.c: (pygst_caps_from_pyobject):
add function to transform a PyObject to a GstCaps*
* gst/gstcaps.override:
implement more sequence functions, deprecate caps.get_structure() in
favour of caps[i] and make the structure-by-reference stuff work
* gst/gststructure.override:
make structures from caps work by reference but don't die a horrible
death if the caps get removed before the structure is
* testsuite/Makefile.am:
run with G_DEBUG=fatal_warnings so we crash on g_warnings in C code
* testsuite/test_caps.py:
add some checks

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -31,7 +31,7 @@ tests =  \
 	test_xml.py
 
 check-local: testhelper.la
-	@PYTHONPATH=$(PYTHONPATH):$(top_builddir):$(top_builddir)/gst/.libs $(PYTHON) $(srcdir)/runtests.py
+	@G_DEBUG=fatal_warnings PYTHONPATH=$(PYTHONPATH):$(top_builddir):$(top_builddir)/gst/.libs $(PYTHON) $(srcdir)/runtests.py
 	@rm -fr *.pyc
 
 EXTRA_DIST = $(tests) common.py runtests.py test-object.h
