configure.ac: add Wall and Werror just like other modules
Original commit message from CVS:

* configure.ac:
add Wall and Werror just like other modules
* gst/gst.override:
* gst/gstelement.override:
fix compile problems for Wall Werror
* testsuite/common.py:
* Makefile.am:
* gst/Makefile.am:
* gst/ltihooks.py:
* ltihooks.py:
move ltihooks to root; having it in gst was a bad hack and
breaks distcheck

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,7 @@ SUBDIRS = \
 DIST_SUBDIRS = $(UNCONDDIRS) docs
 
 EXTRA_DIST = \
+	ltihooks.py \
 	gst-python.spec.in \
 	gst-python.spec \
 	README-docs \
