ext/ffmpeg/: Add ffvideoscale element (#303727)
Original commit message from CVS:
* ext/ffmpeg/gstffmpeg.c (plugin_init):
* ext/ffmpeg/Makefile.am:
* ext/ffmpeg/gstffmpegscale.c:
Add ffvideoscale element (#303727)

* TODO:
update TODO

--- a/ext/ffmpeg/Makefile.am
+++ b/ext/ffmpeg/Makefile.am
@@ -8,7 +8,8 @@ libgstffmpeg_la_SOURCES = gstffmpeg.c 		\
 			  gstffmpegenc.c 	\
 			  gstffmpegmux.c 	\
 			  gstffmpegprotocol.c	\
-			  gstffmpegcolorspace.c
+			  gstffmpegcolorspace.c \
+			  gstffmpegscale.c
 
 libgstffmpeg_la_CFLAGS = $(GST_CFLAGS) \
 	-I $(top_srcdir)/gst-libs/ext/ffmpeg/libavformat \
