configure.ac: Set G_LOG_DOMAIN in config.h to a string literal.
Original commit message from CVS:
* configure.ac: Set G_LOG_DOMAIN in config.h to a string literal.
We should have done this all along.  Fixes #301646
* gst/Makefile.am:
* gst/gst.c: (init_post):
* gst/gst_private.h:
* gst/parse/grammar.y:

--- a/configure.ac
+++ b/configure.ac
@@ -514,6 +514,7 @@ dnl ############################
 
 dnl set license and copyright notice
 AC_DEFINE(GST_LICENSE, "LGPL", [GStreamer license])
+AC_DEFINE(G_LOG_DOMAIN, "GStreamer", [Glib log domain])
 
 dnl package name in plugins
 AC_ARG_WITH(package-name,
