ext/ffmpeg/: Add ffdeinterlace element
Original commit message from CVS:
* ext/ffmpeg/Makefile.am:
* ext/ffmpeg/gstffmpegdeinterlace.c:
* ext/ffmpeg/gstffmpeg.c (plugin_init):
Add ffdeinterlace element
* TODO:
yo, another thing removed from the TODO

--- a/ext/ffmpeg/Makefile.am
+++ b/ext/ffmpeg/Makefile.am
@@ -9,7 +9,8 @@ libgstffmpeg_la_SOURCES = gstffmpeg.c 		\
 			  gstffmpegmux.c 	\
 			  gstffmpegprotocol.c	\
 			  gstffmpegcolorspace.c \
-			  gstffmpegscale.c
+			  gstffmpegscale.c      \
+			  gstffmpegdeinterlace.c
 
 libgstffmpeg_la_CFLAGS = $(GST_CFLAGS) \
 	-I $(top_srcdir)/gst-libs/ext/ffmpeg/libavformat \
