ext/amrnb/: Ported AMR decoder/parse.
Original commit message from CVS:
* ext/amrnb/Makefile.am:
* ext/amrnb/amrnb.c: (plugin_init):
* ext/amrnb/amrnbdec.c: (gst_amrnbdec_init),
(gst_amrnbdec_setcaps), (gst_amrnbdec_chain),
(gst_amrnbdec_state_change):
* ext/amrnb/amrnbdec.h:
* ext/amrnb/amrnbenc.c: (gst_amrnbenc_get_type),
(gst_amrnbenc_base_init), (gst_amrnbenc_class_init),
(gst_amrnbenc_init), (gst_amrnbenc_finalize),
(gst_amrnbenc_setcaps), (gst_amrnbenc_chain),
(gst_amrnbenc_state_change):
* ext/amrnb/amrnbenc.h:
* ext/amrnb/amrnbparse.c: (gst_amrnbparse_init),
(gst_amrnbparse_query), (gst_amrnbparse_event),
(gst_amrnbparse_chain), (gst_amrnbparse_read_header),
(gst_amrnbparse_loop), (gst_amrnbparse_sink_activate),
(gst_amrnbparse_state_change):
* ext/amrnb/amrnbparse.h:
Ported AMR decoder/parse.
Added AMR encoder.

--- a/ext/amrnb/Makefile.am
+++ b/ext/amrnb/Makefile.am
@@ -3,12 +3,14 @@ plugin_LTLIBRARIES = libgstamrnb.la
 libgstamrnb_la_SOURCES = \
 	amrnb.c \
 	amrnbdec.c \
+	amrnbenc.c \
 	amrnbparse.c
 
 libgstamrnb_la_CFLAGS = $(GST_CFLAGS) $(AMRNB_CFLAGS)
 libgstamrnb_la_LIBADD = $(AMRNB_LIBS)
-libgstamrnb_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgstamrnb_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)  $(GST_BASE_LIBS)
 
 noinst_HEADERS = \
 	amrnbdec.h \
+	amrnbenc.h \
 	amrnbparse.h
