examples/gst/: renamed gst-file.py to gstfile.py and made the Discoverer class useable in other applications/scripts
Original commit message from CVS:
* examples/gst/Makefile.am:
* examples/gst/gstfile.py:
renamed gst-file.py to gstfile.py and made the Discoverer class useable
in other applications/scripts
* examples/gst/audioconcat.py:
Example application that uses the Discoverer and the gnonlin elements to
concatenate several audio files to one single one

--- a/examples/gst/Makefile.am
+++ b/examples/gst/Makefile.am
@@ -7,6 +7,7 @@ examples_DATA = 	\
 	gst123		\
 	play.py		\
 	vorbisplay.py	\
-	gst-file.py
+	gstfile.py	\
+	audioconcat.py
 
 EXTRA_DIST = $(examples_DATA)
