gst/gsturi.c: The show must go on, even if the element did not accept the uri. Fixes endless loop as witnessed in #30...
Original commit message from CVS:
* gst/gsturi.c: (gst_element_make_from_uri):
The show must go on, even if the element did not accept
the uri. Fixes endless loop as witnessed in #307804.
* tools/gst-launch.1.in:
Update mp3->ogg transcoding pipeline in examples section
to use rawvorbisenc and oggmux.

--- a/tools/gst-launch.1.in
+++ b/tools/gst-launch.1.in
@@ -247,7 +247,7 @@ Use GNOME\-VFS to play an mp3 file located on an SMB server
 .B Format conversion
 
 .B
-        gst\-launch filesrc location=music.mp3 ! mad ! vorbisenc ! filesink location=music.ogg
+        gst\-launch filesrc location=music.mp3 ! mad ! audioscale ! audioconvert ! rawvorbisenc ! oggmux ! filesink location=music.ogg
 .br
 Convert an mp3 music file to an Ogg Vorbis file
 
