gst/: fix deserialization to have similar semantics to cast's, and check if the value is fittable into the target siz...
Original commit message from CVS:
* gst/gstcaps.c: (gst_caps_from_string_inplace):
* gst/gststructure.c:
* gst/gstvalue.c: (gst_value_deserialize_int_helper):
fix deserialization to have similar semantics to cast's,
and check if the value is fittable into the target size,
instead of doing a G_MIN/G_MAX comparison
* testsuite/caps/Makefile.am:
* testsuite/caps/caps.h:
add caps that specify rgb bit masks using 0xFF...

--- a/tests/old/testsuite/caps/Makefile.am
+++ b/tests/old/testsuite/caps/Makefile.am
@@ -12,6 +12,7 @@ tests_pass = \
 	fixed \
 	fraction-convert \
 	fraction-multiply-and-zero \
+	fromstring \
 	intersect2 \
 	caps \
 	value_compare \
