--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = edgedetect facedetect pyramidsegment templatematch
+SUBDIRS = edgedetect faceblur facedetect pyramidsegment
 
 # plugindir is set in configure
 
@@ -11,12 +11,14 @@ libgstopencv_la_SOURCES = gstopencv.c
 # add other _CFLAGS and _LIBS as needed
 libgstopencv_la_CFLAGS = $(GST_CFLAGS) $(OPENCV_CFLAGS) \
 								 -I${top_srcdir}/ext/opencv/edgedetect \
+								 -I${top_srcdir}/ext/opencv/faceblur \
 								 -I${top_srcdir}/ext/opencv/facedetect \
 								 -I${top_srcdir}/ext/opencv/pyramidsegment \
 								 -I${top_srcdir}/ext/opencv/templatematch
 
 libgstopencv_la_LIBADD = $(GST_LIBS) $(OPENCV_LIBS) \
 								 $(top_builddir)/ext/opencv/edgedetect/libgstedgedetect.la \
+								 $(top_builddir)/ext/opencv/faceblur/libgstfaceblur.la \
 								 $(top_builddir)/ext/opencv/facedetect/libgstfacedetect.la \
 								 $(top_builddir)/ext/opencv/pyramidsegment/libgstpyramidsegment.la \
 								 $(top_builddir)/ext/opencv/templatematch/libgsttemplatematch.la
@@ -25,6 +27,7 @@ libgstopencv_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 libgstopencv_la_DEPENDENCIES = \
 								 $(top_builddir)/ext/opencv/edgedetect/libgstedgedetect.la \
+								 $(top_builddir)/ext/opencv/faceblur/libgstfaceblur.la \
 								 $(top_builddir)/ext/opencv/facedetect/libgstfacedetect.la \
 								 $(top_builddir)/ext/opencv/pyramidsegment/libgstpyramidsegment.la \
 								 $(top_builddir)/ext/opencv/templatematch/libgsttemplatematch.la
