--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = edgedetect faceblur facedetect pyramidsegment
+SUBDIRS = edgedetect faceblur facedetect pyramidsegment templatematch textwrite
 
 # plugindir is set in configure
 
@@ -14,14 +14,16 @@ libgstopencv_la_CFLAGS = $(GST_CFLAGS) $(OPENCV_CFLAGS) \
 								 -I${top_srcdir}/ext/opencv/faceblur \
 								 -I${top_srcdir}/ext/opencv/facedetect \
 								 -I${top_srcdir}/ext/opencv/pyramidsegment \
-								 -I${top_srcdir}/ext/opencv/templatematch
+								 -I${top_srcdir}/ext/opencv/templatematch \
+								 -I${top_srcdir}/ext/opencv/textwrite 
 
 libgstopencv_la_LIBADD = $(GST_LIBS) $(OPENCV_LIBS) \
 								 $(top_builddir)/ext/opencv/edgedetect/libgstedgedetect.la \
 								 $(top_builddir)/ext/opencv/faceblur/libgstfaceblur.la \
 								 $(top_builddir)/ext/opencv/facedetect/libgstfacedetect.la \
 								 $(top_builddir)/ext/opencv/pyramidsegment/libgstpyramidsegment.la \
-								 $(top_builddir)/ext/opencv/templatematch/libgsttemplatematch.la
+								 $(top_builddir)/ext/opencv/templatematch/libgsttemplatematch.la \
+								 $(top_builddir)/ext/opencv/textwrite/libgsttextwrite.la
 
 libgstopencv_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
@@ -30,7 +32,8 @@ libgstopencv_la_DEPENDENCIES = \
 								 $(top_builddir)/ext/opencv/faceblur/libgstfaceblur.la \
 								 $(top_builddir)/ext/opencv/facedetect/libgstfacedetect.la \
 								 $(top_builddir)/ext/opencv/pyramidsegment/libgstpyramidsegment.la \
-								 $(top_builddir)/ext/opencv/templatematch/libgsttemplatematch.la
+								 $(top_builddir)/ext/opencv/templatematch/libgsttemplatematch.la \
+								 $(top_builddir)/ext/opencv/textwrite/libgsttextwrite.la
 
 # headers we need but don't want installed
 noinst_HEADERS = 
