examples: camerabin: use photoiface properties through video-source
Fixes #616923

--- a/tests/examples/camerabin/Makefile.am
+++ b/tests/examples/camerabin/Makefile.am
@@ -36,8 +36,13 @@ if HAVE_X11
 GST_CAMERABIN_X11_EXAMPLES = gst-camerabin-test
 
 gst_camerabin_test_SOURCES = gst-camerabin-test.c
-gst_camerabin_test_CFLAGS  = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
-gst_camerabin_test_LDADD = -lgstinterfaces-@GST_MAJORMINOR@ $(GST_LIBS) $(GST_PLUGINS_BASE_LIBS) $(X11_LIBS)
+gst_camerabin_test_CFLAGS  = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(GST_PLUGINS_BAD_CFLAGS)
+gst_camerabin_test_LDADD   = \
+	$(top_builddir)/gst-libs/gst/interfaces/libgstphotography-@GST_MAJORMINOR@.la \
+	-lgstinterfaces-@GST_MAJORMINOR@ \
+	$(GST_LIBS) \
+	$(GST_PLUGINS_BASE_LIBS) \
+	$(X11_LIBS)
 
 else
 GST_CAMERABIN_X11_EXAMPLES =
