Fix check for VA-API enabled FFmpeg.

--- a/configure.ac
+++ b/configure.ac
@@ -258,7 +258,8 @@ AC_CHECK_HEADERS([libavformat/avformat.h])
 
 PKG_CHECK_MODULES(LIBAVCODEC, [libavcodec])
 AC_CHECK_HEADERS([libavcodec/avcodec.h])
-AC_CHECK_HEADERS([libavcodec/vaapi.h])
+AC_CHECK_HEADERS([libavcodec/vaapi.h], [],
+    AC_MSG_ERROR([The system FFmpeg headers do not support VA-API]))
 
 AC_DEFINE_UNQUOTED(USE_GLX, $USE_GLX,
     [Defined to 1 if GLX is enabled])
