--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = vaapiconvert vaapisink
+SUBDIRS = vaapiconvert vaapidecode vaapisink
 
 # Extra clean files so that maintainer-clean removes *everything*
 MAINTAINERCLEANFILES = Makefile.in
