pbutils: add codec-specific utility functions for AAC
This allows us to add generic codec-specific functionality, like
extracting profile/level data from headers, without having to duplicate
code across demuxers and typefindfunctions.

As a starting point, this moves over AAC level extraction code from
typefindfunctions, so it can be reused in qtdemux, etc.

https://bugzilla.gnome.org/show_bug.cgi?id=617314

API: gst_codec_utils_aac_get_sample_rate_from_index()
API: gst_codec_utils_aac_get_level()

--- a/gst-libs/gst/pbutils/Makefile.am
+++ b/gst-libs/gst/pbutils/Makefile.am
@@ -2,6 +2,7 @@ lib_LTLIBRARIES = libgstpbutils-@GST_MAJORMINOR@.la
 
 headers_pbutils = \
 	pbutils.h         \
+	codec-utils.h     \
 	descriptions.h    \
 	install-plugins.h \
 	missing-plugins.h \
@@ -27,6 +28,7 @@ built_headers_configure = \
 libgstpbutils_@GST_MAJORMINOR@_la_SOURCES = \
 	gstpluginsbaseversion.c \
 	pbutils.c         \
+	codec-utils.c     \
 	descriptions.c    \
 	install-plugins.c \
 	missing-plugins.c \
