Ship with COPYING.LIB.

--- a/debian.upstream/Makefile.am
+++ b/debian.upstream/Makefile.am
@@ -1,8 +1,9 @@
 DOCS = \
-	AUTHORS	\
-	COPYING	\
-	NEWS	\
-	README	\
+	AUTHORS		\
+	COPYING		\
+	COPYING.LIB	\
+	NEWS		\
+	README		\
 	$(NULL)
 
 DEBIANFILES = \
