--- a/docs/reference/plugins/Makefile.am
+++ b/docs/reference/plugins/Makefile.am
@@ -88,6 +88,7 @@ INCLUDES = \
 GTKDOC_LIBS = \
 	$(top_builddir)/gst-libs/gst/vaapi/libgstvaapi-$(GST_MAJORMINOR).la \
 	$(top_builddir)/gst-libs/gst/vaapi/libgstvaapi-x11-$(GST_MAJORMINOR).la \
+	$(top_builddir)/gst/vaapidecode/libgstvaapidecode.la \
 	$(top_builddir)/gst/vaapiconvert/libgstvaapiconvert.la \
 	$(top_builddir)/gst/vaapisink/libgstvaapisink.la \
 	$(GLIB_LIBS)
