--- a/gst/vaapidecode/Makefile.am
+++ b/gst/vaapidecode/Makefile.am
@@ -28,6 +28,7 @@ libgstvaapidecode_la_LIBADD =	\
 	$(GST_VIDEO_LIBS)	\
 	$(GST_PLUGINS_BASE_LIBS)
 
+libgstvaapidecode_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstvaapidecode_la_LIBTOOLFLAGS = --tag=disable-static
 
 # Extra clean files so that maintainer-clean removes *everything*
