--- a/gst/vaapisink/Makefile.am
+++ b/gst/vaapisink/Makefile.am
@@ -31,6 +31,7 @@ libgstvaapisink_la_LIBADD =	\
 	$(GST_VIDEO_LIBS)	\
 	$(GST_PLUGINS_BASE_LIBS)
 
+libgstvaapisink_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstvaapisink_la_LIBTOOLFLAGS = --tag=disable-static
 
 # Extra clean files so that maintainer-clean removes *everything*
