gstopencvbasetrans: Adds this new base class
Adds GstOpencvBaseTransform as base class for simple 1:1
opencv filters

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -5,11 +5,12 @@ SUBDIRS = edgedetect faceblur facedetect pyramidsegment templatematch textwrite
 plugin_LTLIBRARIES = libgstopencv.la
 
 # sources used to compile this plug-in
-libgstopencv_la_SOURCES = gstopencv.c
+libgstopencv_la_SOURCES = gstopencv.c gstopencvbasetrans.c
 
 # flags used to compile this facedetect
 # add other _CFLAGS and _LIBS as needed
-libgstopencv_la_CFLAGS = $(GST_CFLAGS) $(OPENCV_CFLAGS) \
+libgstopencv_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(OPENCV_CFLAGS) \
+								 -I${top_srcdir}/src \
 								 -I${top_srcdir}/ext/opencv/edgedetect \
 								 -I${top_srcdir}/ext/opencv/faceblur \
 								 -I${top_srcdir}/ext/opencv/facedetect \
@@ -17,8 +18,7 @@ libgstopencv_la_CFLAGS = $(GST_CFLAGS) $(OPENCV_CFLAGS) \
 								 -I${top_srcdir}/ext/opencv/templatematch \
 								 -I${top_srcdir}/ext/opencv/textwrite 
 
-libgstopencv_la_LIBADD = $(GST_LIBS) $(OPENCV_LIBS) \
-								 $(top_builddir)/ext/opencv/edgedetect/libgstedgedetect.la \
+libgstopencv_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) $(OPENCV_LIBS) \
 								 $(top_builddir)/ext/opencv/faceblur/libgstfaceblur.la \
 								 $(top_builddir)/ext/opencv/facedetect/libgstfacedetect.la \
 								 $(top_builddir)/ext/opencv/pyramidsegment/libgstpyramidsegment.la \
@@ -36,4 +36,4 @@ libgstopencv_la_DEPENDENCIES = \
 								 $(top_builddir)/ext/opencv/textwrite/libgsttextwrite.la
 
 # headers we need but don't want installed
-noinst_HEADERS = 
+noinst_HEADERS = gstopencvbasetrans.h
