--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = edgedetect faceblur facedetect pyramidsegment templatematch textwrite
+SUBDIRS = basicfilters edgedetect faceblur facedetect pyramidsegment templatematch textwrite
 
 # plugindir is set in configure
 
@@ -11,6 +11,7 @@ libgstopencv_la_SOURCES = gstopencv.c gstopencvbasetrans.c
 # add other _CFLAGS and _LIBS as needed
 libgstopencv_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(OPENCV_CFLAGS) \
 								 -I${top_srcdir}/src \
+								 -I${top_srcdir}/ext/opencv/basicfilters \
 								 -I${top_srcdir}/ext/opencv/edgedetect \
 								 -I${top_srcdir}/ext/opencv/faceblur \
 								 -I${top_srcdir}/ext/opencv/facedetect \
@@ -19,6 +20,8 @@ libgstopencv_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(OPENCV_CFLAGS) \
 								 -I${top_srcdir}/ext/opencv/textwrite 
 
 libgstopencv_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) $(OPENCV_LIBS) \
+								 $(top_builddir)/ext/opencv/basicfilters/libgstbasicfilters.la \
+								 $(top_builddir)/ext/opencv/edgedetect/libgstedgedetect.la \
 								 $(top_builddir)/ext/opencv/faceblur/libgstfaceblur.la \
 								 $(top_builddir)/ext/opencv/facedetect/libgstfacedetect.la \
 								 $(top_builddir)/ext/opencv/pyramidsegment/libgstpyramidsegment.la \
@@ -28,6 +31,7 @@ libgstopencv_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) $(OPENCV_LIBS) \
 libgstopencv_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 libgstopencv_la_DEPENDENCIES = \
+								 $(top_builddir)/ext/opencv/basicfilters/libgstbasicfilters.la \
 								 $(top_builddir)/ext/opencv/edgedetect/libgstedgedetect.la \
 								 $(top_builddir)/ext/opencv/faceblur/libgstfaceblur.la \
 								 $(top_builddir)/ext/opencv/facedetect/libgstfacedetect.la \
