Add gst_vaapi_display_lookup_downstream() helper.

--- a/gst-libs/gst/vaapi/Makefile.am
+++ b/gst-libs/gst/vaapi/Makefile.am
@@ -37,6 +37,7 @@ libgstvaapi_source_c =				\
 	gstvaapisurfacepool.c			\
 	gstvaapisurfaceproxy.c			\
 	gstvaapiutils.c				\
+	gstvaapiutils_gst.c			\
 	gstvaapivalue.c				\
 	gstvaapivideobuffer.c			\
 	gstvaapivideopool.c			\
@@ -75,6 +76,7 @@ libgstvaapi_source_priv_h =			\
 	gstvaapidisplay_priv.h			\
 	gstvaapiobject_priv.h			\
 	gstvaapiutils.h				\
+	gstvaapiutils_gst.h			\
 	gstvaapi_priv.h				\
 	$(libgst_vaapi_ffmpeg_source_priv_h)	\
 	$(NULL)
