--- a/docs/plugins/Makefile.am
+++ b/docs/plugins/Makefile.am
@@ -161,6 +161,7 @@ EXTRA_HFILES = \
 	$(top_srcdir)/gst/selector/gstoutputselector.h \
 	$(top_srcdir)/gst/speed/gstspeed.h \
 	$(top_srcdir)/gst/stereo/gststereo.h \
+	$(top_srcdir)/gst/videomaxrate/videomaxrate.h \
 	$(top_srcdir)/gst/videosignal/gstvideoanalyse.h \
 	$(top_srcdir)/gst/videosignal/gstvideodetect.h \
 	$(top_srcdir)/gst/videosignal/gstvideomark.h \
