check in unit tests for titles

--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -21,7 +21,8 @@ check_PROGRAMS = \
 	ges/simplelayer	\
 	ges/transition	\
 	ges/timelineobject	\
-	ges/backgroundsource
+	ges/backgroundsource\
+	ges/titles
 
 noinst_HEADERS = 
 
