check in GESTrackAudioTransition, empyt subclass of TrackTransition

--- a/ges/Makefile.am
+++ b/ges/Makefile.am
@@ -25,6 +25,7 @@ libges_@GST_MAJORMINOR@_la_SOURCES = 		\
 	ges-track-source.c			\
 	ges-track-filesource.c			\
 	ges-track-transition.c			\
+	ges-track-audio-transition.c			\
 	ges-track-background-source.c			\
 	ges-track-video-background-source.c			\
 	ges-track-audio-background-source.c			\
@@ -54,6 +55,7 @@ libges_@GST_MAJORMINOR@include_HEADERS = 	\
 	ges-track-source.h			\
 	ges-track-filesource.h			\
 	ges-track-transition.h			\
+	ges-track-audio-transition.h			\
 	ges-track-background-source.h			\
 	ges-track-video-background-source.h			\
 	ges-track-audio-background-source.h			\
