check in GESTrackVideoTransition, empty subclass of TrackTransition

--- a/ges/Makefile.am
+++ b/ges/Makefile.am
@@ -26,6 +26,7 @@ libges_@GST_MAJORMINOR@_la_SOURCES = 		\
 	ges-track-filesource.c			\
 	ges-track-transition.c			\
 	ges-track-audio-transition.c			\
+	ges-track-video-transition.c			\
 	ges-track-background-source.c			\
 	ges-track-video-background-source.c			\
 	ges-track-audio-background-source.c			\
@@ -56,6 +57,7 @@ libges_@GST_MAJORMINOR@include_HEADERS = 	\
 	ges-track-filesource.h			\
 	ges-track-transition.h			\
 	ges-track-audio-transition.h			\
+	ges-track-video-transition.h			\
 	ges-track-background-source.h			\
 	ges-track-video-background-source.h			\
 	ges-track-audio-background-source.h			\
