--- a/ges/Makefile.am
+++ b/ges/Makefile.am
@@ -20,6 +20,7 @@ libges_@GST_MAJORMINOR@_la_SOURCES = 		\
 	ges-timeline-transition.c		\
 	ges-timeline-background-source.c		\
 	ges-timeline-title-source.c		\
+	ges-timeline-overlay.c		\
 	ges-track.c				\
 	ges-track-object.c			\
 	ges-track-source.c			\
@@ -51,6 +52,7 @@ libges_@GST_MAJORMINOR@include_HEADERS = 	\
 	ges-timeline-transition.h		\
 	ges-timeline-background-source.h		\
 	ges-timeline-title-source.h		\
+	ges-timeline-overlay.h		\
 	ges-track.h				\
 	ges-track-object.h			\
 	ges-track-source.h			\
